tests/err00.json.err
Parse error at line 001

001: "aaa"
     ^
JSON can start only with array or object
